# spherical-harmonics

./: CMakeLists.txt  README.org  globals.cpp  globals.h  gnuplot_interface.cpp  gnuplot_interface.h  interactive_prompt.cpp  interactive_prompt.h  main.cpp
